--- a/profil.html
+++ b/profil.html
@@ -9,7 +9,10 @@
 <body>
 
 <header class="top-nav">
-    <div class="brand">Inna Corner</div>
+    <div class="brand">
+        <img src="gambar/gambar_21.png" alt="Logo Inna Corner" class="logo">
+        <span>Inna Corner</span>
+    </div>
     <nav>
         <a href="index.html">Home</a>
         <a href="menu.html">Menu</a>
@@ -18,7 +21,7 @@
 </header>
 
 <section class="profile">
-    <img src="https://img-global.cpcdn.com/recipes/b4d742f9567d1ffe/680x781cq80/puding-coklat-vla-vanilla-susu-foto-resep-utama.jpg">
+    <img src="gambar/gambar_19.jpg">
     <h2>Inna Corner</h2>
     <p>UMKM Kuliner Lokal dengan Kualitas Premium</p>
 
@@ -75,5 +78,6 @@
 
 
 <footer class="footer">© 2025 Puding Manis</footer>
+
 </body>
 </html>
