--- a/profil.html
+++ b/profil.html
@@ -21,7 +21,7 @@
 </header>
 
 <section class="profile">
-    <img src="gambar/gambar_19.jpg">
+    <img src="gambar/gambar_21.png">
     <h2>Inna Corner</h2>
     <p>UMKM Kuliner Lokal dengan Kualitas Premium</p>
 
