--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <header class="top-nav">
     <div class="brand">
-        <img src="gambar./gambar_21.png" alt="Logo Inna Corner" class="logo">
+        <img src="gambar/gambar_21.png" alt="Logo Inna Corner" class="logo">
         <span>Inna Corner</span>
     </div>
     <nav>
@@ -157,5 +157,3 @@
 
 </body>
 </html>
-
-
